# native-leptos

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  justfile
api/: .env.example  Cargo.toml  Dockerfile
api-types/: Cargo.toml
api-types/src/: lib.rs  resources.rs  responses.rs
api/data/: app.db
api/migrations/: 001_create_resources.sql
api/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  middleware.rs  router.rs  state.rs
component-gallery/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
component-gallery/public/: output.css
component-gallery/src/: main.rs
leptos-site/: README.md  justfile  package.json
leptos-site/src/: articles.rs  bridge.rs  components.rs  lib.rs  pages.rs
leptos-site/src/articles/: building_web_apps_with_leptos.rs  getting_started_with_rust.rs  understanding_rust_ownership.rs
leptos-site/src/components/: navigation.rs  section_navigator.rs
leptos-site/src/pages/: about.rs  article.rs  articles.rs  contact.rs  experience.rs  home.rs  not_found.rs  projects.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
site/: Cargo.toml  index.html  tailwind.config.js
site/src/: api.rs  bridge.rs  lib.rs
src/: context.rs  main.rs  static_server.rs  webview_manager.rs
ui/: Cargo.toml
ui/src/: button.rs  dialog.rs  icons.rs  lib.rs  toast.rs  toggle.rs
