[workspace]
resolver = "2"
members = ["."]
exclude = ["leptos-site", "protocol"]

[package]
name = "native-leptos"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = "A native app hosting a WebView with bidirectional IPC to a WASM frontend"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90"

[[bin]]
name = "native-leptos"
path = "src/main.rs"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nightshade = { version = "0.6.55", features = ["egui"] }
wry = "0.53.5"
include_dir = "0.7.4"
tiny_http = "0.12.0"
web_host_protocol = { path = "protocol" }
rand = "0.9"

[build-dependencies]
