[package]
name = "component-gallery"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
ui = { path = "../ui" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
