[package]
name = "leptos-example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Storage", "DomTokenList", "Location", "Element", "Event", "MouseEvent", "NodeList", "DomRect", "KeyboardEvent", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }
web_host_protocol = { path = "../protocol" }
api_types = { path = "../api-types" }
ui = { path = "../ui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
